--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -7,16 +7,15 @@
 			<h1><a href="/">Yura Blog</a></h1>
 		</div>
 
-		<div>
-			<p>published: 1 Feb. 24, 13:43</p>
-			<h2><a href="">My first post</a></h2>
-			<p>This is my first post. I'm so excited!</p>
-		</div>
+		{% for post in posts %}
+			
+			<div>
+				<p>published: {{ post.published_date }}</p>
+				<h2><a href="">{{ post.title }}</a></h1>
+				<p>{{ post.text|linebreaksbr }}</p>
+			</div>
 
-		<div>
-			<p>published: 1 Feb. 24, 13:44</p>
-			<h2><a href="">My second post</a></h2>
-			<p>It's so cool! I'm happy</p>
-		</div>
+		{% endfor %}
+
 	</body>
 </html>
